--- a/hotel.html
+++ b/hotel.html
@@ -195,8 +195,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.grandlisboa.com/en">
+                        <div class="together"> <a href="https://www.grandlisboa.com/en">
                                 <h3>Grand Lisboa</h3>
                                 <ul>
                                     <li>Iconic casino hotel</li>
@@ -206,8 +205,45 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.grandlisboa.com/en"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.grandlisboa.com/en" class="button_main">Buy Tickets CTA</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="thessa-inner">
+                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="together"> <a href="https://www.fourseasons.com/macau/">
+                                <h3>Four Seasons Hotel Macau, Cotai Strip
+                                </h3>
+                                <ul>
+                                    <li>Luxury hotel</li>
+                                    <li>High end casino</li>
+                                    <li>Upscale amenities</li>
+                                    <li>Located in Cotai.</li>
+                                </ul>
+
+                        </div>
+                        <div class="hotel_btn">
+                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets CTA</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="thessa-inner">
+                        <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
+                        <div class="together"> <a href="https://www.fourseasons.com/macau/">
+                                <h3>Four Seasons Hotel Macau, Cotai Strip
+                                </h3>
+                                <ul>
+                                    <li>Luxury hotel</li>
+                                    <li>High end casino</li>
+                                    <li>Upscale amenities</li>
+                                    <li>Located in Cotai.</li>
+                                </ul>
+
+                        </div>
+                        <div class="hotel_btn">
+                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
