--- a/hotel.html
+++ b/hotel.html
@@ -231,19 +231,18 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.fourseasons.com/macau/">
-                                <h3>Four Seasons Hotel Macau, Cotai Strip
-                                </h3>
+                        <div class="together"> <a href="https://www.parisianmacao.com/">
+                                <h3>The Parisian Macao</h3>
                                 <ul>
-                                    <li>Luxury hotel</li>
-                                    <li>High end casino</li>
-                                    <li>Upscale amenities</li>
-                                    <li>Located in Cotai.</li>
+                                    <li>Resort with a replica Eiffel Tower</li>
+                                    <li>Themed Parisian decor</li>
+                                    <li>Modern casino</li>
+                                    <li>Array of restaurants</li>
                                 </ul>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.fourseasons.com/macau/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.parisianmacao.com/" class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
