--- a/hotel.html
+++ b/hotel.html
@@ -273,14 +273,15 @@
                         <h4 class="panel-title">
                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                 aria-expanded="false" aria-controls="collapseOne">
-                                What types of events can I find on TicketsMacau?</a>
+                                What types of hotels can I find on TicketsMacau?</a>
                         </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
                         aria-labelledby="headingOne">
                         <div class="panel-body">
-                            You can find a wide range of events, including concerts, theatrical performances, casino
-                            tournaments, and cultural tours, all hosted in Macau’s premier venues.</div>
+                            Our listings include a diverse range of accommodations, from luxury casino hotels with
+                            gaming floors to boutique hotels with unique features, catering to various preferences and
+                            budgets.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -288,16 +289,14 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                How can I purchase tickets for events?
+                                How can I book a hotel through TicketsMacau?
                             </a>
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                         <div class="panel-body">
-                            Tickets can be purchased through our site by following the event links to the respective
-                            ticKeting platforms or directly through event organizers.
-
-                        </div>
+                            You can book hotels by following the links provided on our site to the respective hotel
+                            booking platforms or directly through hotel websites.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -305,16 +304,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Are event details and schedules always up-to-date?
-
-                            </a>
+                                Are hotel details and availability always up-to-date?</a>
                         </h4>
                     </div>
                     <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingThree">
                         <div class="panel-body">
-                            We strive to provide accurate and current information, but event details and schedules may
-                            change. We recommend checking directly with the event organizers for the latest updates.
+                            We strive to provide accurate information, but hotel details and availability may change.
+                            For
+                            the most current information, please check directly with the hotel or booking platform.
                         </div>
                     </div>
                 </div>
@@ -323,16 +321,16 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                                Can I get a refund if I can’t attend an event?
+                                What should I do if I need to cancel or change a hotel reservation?
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefour" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfour">
                         <div class="panel-body">
-                            Refund policies vary by event and ticketing provider. Please review the terms and conditions
-                            at the time of purchase and contact the ticketing provider for assistance with refunds or
-                            exchanges.</div>
+                            Cancellation and change policies vary by hotel and booking provider. Please review the
+                            terms and conditions at the time of booking and contact the hotel or booking platform for
+                            assistance.</div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -340,15 +338,15 @@
                         <h4 class="panel-title">
                             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
-                                How do I find out about new events and updates?
+                                How can I find out about special offers or promotions for hotels?
                             </a>
                         </h4>
                     </div>
                     <div id="collapsefive" class="panel-collapse collapse" role="tabpanel"
                         aria-labelledby="headingfive">
                         <div class="panel-body">
-                            Stay updated by subscribing to our newsletter or following our social media channels for the
-                            latest news and announcements on upcoming events in Macau.
+                            Stay informed about special offers and promotions by subscribing to our newsletter or
+                            visiting hotel websites directly for the latest deals and discounts.
                         </div>
                     </div>
                 </div>
