--- a/sport.html
+++ b/sport.html
@@ -90,22 +90,18 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193">
-                                <h3>Harry Potter™: The Exhibition
-                                </h3>
-                                <span>📍The Venetian Macau</span>
-                                <p>📅 Daily</p>
+                                href="https://www.macau.grandprix.gov.mo/en/ticket-info">
+                                <h3>Macau Grand Prix</h3>
+                                <span>📍 Grand Lisboa</span>
+                                <p>📅November 14-17, 2024</p>
                             </a>
-                            <p>Harry Potter™: The Exhibition is a pioneering traveling showcase that celebrates the most
-                                iconic
-                                moments, characters, locations, and magical creatures from the Harry Potter™ film series
-                                and
-                                the Wizarding World. Featuring state-of-the-art design and cutting-edge technology, this
-                                exhibition enchants visitors with authentic props, costumes, and immersive storytelling.
+                            <p>One of the most famous motorsport events in Asia, featuring Formula 3 and touring car
+                                races. The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality
+                                and entertainment.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.londonermacao.com/macau-events-shows/harry-potter-exhibition.html?_ga=2.61142892.1132260017.1723028193-993384100.1723028193"
+                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
