--- a/sport.html
+++ b/sport.html
@@ -89,20 +89,20 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.macau.grandprix.gov.mo/en/ticket-info">
+                        <div class="together"> <a href="https://www.macau.grandprix.gov.mo/en/ticket-info">
                                 <h3>Macau Grand Prix</h3>
                                 <span>📍 Grand Lisboa</span>
                                 <p>📅November 14-17, 2024</p>
                             </a>
                             <p>One of the most famous motorsport events in Asia, featuring Formula 3 and touring car
-                                races. The Grand Prix is a major attraction, and the Grand Lisboa provides key hospitality
+                                races. The Grand Prix is a major attraction, and the Grand Lisboa provides key
+                                hospitality
                                 and entertainment.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" class="button_main">Buy Tickets
+                                CTA</a>
                         </div>
                     </div>
                 </div>
@@ -110,20 +110,17 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193">
-                                <h3>TeamLab - SuperNature Macao</h3>
-                                <span>📍The Venetian Macau</span>
-                                <p>📅 Daily</p>
+                                href="https://worldsmarathons.com/marathon/macau-international-marathon">
+                                <h3>Macau Galaxy Entertainment International Marathon</h3>
+                                <span>📍 Macau</span>
+                                <p>📅1st December</p>
                             </a>
-                            <p>TeamLab SuperNature is an expansive, three-dimensional interactive experience covering
-                                5,000 square meters, featuring massive 8-meter-tall installations by the art collective
-                                teamLab. This "body immersive" museum focuses on a series of artworks designed to
-                                explore fresh perspectives on the world and the interconnectedness between humanity and
-                                nature.
+                            <p>A major marathon event with multiple race categories. Sponsored by Galaxy Casino and
+                                Entertainment group
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://en.sandsresortsmacao.com/sands-lifestyle/macau-shows/teamlab.html?_gl=1*1chmzqk*_gcl_au*NjUwMTE5ODgyLjE3MjMwMjgxOTI.*_ga*OTkzMzg0MTAwLjE3MjMwMjgxOTM.*_ga_H84668JQMV*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.*_ga_CCKE5Z3T7T*MTcyMzAyODE5Mi4xLjEuMTcyMzAyODIxOC4zNC4wLjA.&_ga=2.52853864.1132260017.1723028193-993384100.1723028193"
+                            <a href="https://worldsmarathons.com/marathon/macau-international-marathon"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
@@ -132,22 +129,17 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition">
-                                <h3>MGM X Ren Zhe – “Legends of Chivalry” Art Exhibition</h3>
-                                <span>📍MGM Cotai</span>
-                                <p>📅 Daily</p>
+                                href="https://www.macau.grandprix.gov.mo/en/">
+                                <h3>Macau Grand Prix</h3>
+                                <span>📍 Macau Grand Prix Circuit</span>
+                                <p>📅November 14-17, 2024</p>
                             </a>
-                            <p>MGM collaborates with acclaimed contemporary Chinese artist Ren Zhe to present an art
-                                exhibition themed "Legends of Chivalry." This showcase features a diverse collection of
-                                the
-                                artist’s sculptural masterpieces depicting classic wuxia characters. Embracing the
-                                spirit of
-                                "Strive in the Spirit of the Lion & Chivalry" from the Wuxia world, MGM is dedicated to
-                                innovatively preserving Chinese culture through unique and contemporary art experiences.
+                            <p>One of Asia's premier motorsport events, featuring Formula 3, GT, and touring car races.
+                                Find accommodation and viewing decks at some of Macau’s premier hotels.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/Legend-of-Chivalry-MGMXRen-Zhe-Art-Exhibition"
+                            <a href="https://www.macau.grandprix.gov.mo/en/"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
@@ -157,8 +149,7 @@
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU">
-                                <h3>Fantastic Art World from CENTRE POMPIDOU: The Plantamouves
-                                </h3>
+                                <h3>MGM Macau Open Tennis Championships</h3>
                                 <span>📍MGM Cotai
                                 </span>
                                 <p>📅 July 23rd-October 27th</p>
