--- a/sport.html
+++ b/sport.html
@@ -148,28 +148,18 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU">
+                                href="https://www.mgmmacautennis.com/2023/en/news-20231113/">
                                 <h3>MGM Macau Open Tennis Championships</h3>
-                                <span>📍MGM Cotai
-                                </span>
-                                <p>📅 July 23rd-October 27th</p>
+                                <span>📍 Macau Tennis Academy</span>
+                                <p>📅December 8-14, 2024</p>
                             </a>
-                            <p>Artists Clédat & Petitpierre present a workshop exhibition in the form of a
-                                landscape-sculpture in which the moving body becomes the beating heart of the
-                                installation.
-                                This sensory space encourages metamorphosis, play and travel beyond dreams. Children
-                                become the privileged members of a multicoloured, proliferating microcosm: the
-                                Plantamouves. Get into the dance and become a Plantamouve! With the help of
-                                choreographic tutorials, the public is invited to move, dance and reinvent movements
-                                based
-                                on many wearable extensions of the body. Come together and play a role in this strange
-                                ballet with a constellation of hybrid characters where movement is used to feed and
-                                activate
-                                the wonderful world of Plantamouves
-                            </p>
+                            <p>A professional tennis tournament featuring international players. Sponsored by casino and
+                                entertainment group.
+                                A professional tennis tournament featuring international players. Sponsored by casino and
+                                entertainment group.</p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/Fantastic-Art-World-from-CENTRE-POMPIDOU"
+                            <a href="https://www.mgmmacautennis.com/2023/en/news-20231113/"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
