--- a/sport.html
+++ b/sport.html
@@ -203,23 +203,18 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey">
-                                <h3>Sea Odyssey</h3>
-                                <span>📍MGM Cotai
-                                </span>
-                                <p>📅 Year Round
-                                </p>
+                        <div class="together"> <a href="http://www.asbcnews.org/macau-issued-its-boxing-plans-for-2024/">
+                                <h3>Macau International Boxing Championship
+                                </h3>
+                                <span>📍 Venetian Macao or local venues</span>
+                                <p>📅February 15, 2025</p>
                             </a>
-                            <p>Dive into a magical ocean and meet our charming dolphins at the Sea Odyssey, as they
-                                prance and swim in this upbeat show under the Spectacle, submerge in the subaquatic
-                                environment with the world’s largest area of permanent indoor LED screens showcasing an
-                                array of underwater scenery.
-
+                            <p>An international boxing event with various weight classes and renowned fighters.
                             </p>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgm.mo/en/cotai/entertainment/sea-odyssey" class="button_main">Buy
+                            <a href="http://www.asbcnews.org/macau-issued-its-boxing-plans-for-2024/" class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
                     </div>
