--- a/sport.html
+++ b/sport.html
@@ -224,23 +224,14 @@
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
                                 href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition">
-                                <h3>2024 Hypercar Exhibition
-                                </h3>
-                                <span>📍Wynn Signature
+                                <h3>SJM Macao Open</h3>
+                                <span>📍 Macau Golf and Country Club
                                 </span>
-                                <p>📅 1st August-13th October
+                                <p>📅10th - 13th October 2024
                                 </p>
                             </a>
-                            <p>The Wynn Signature – 2024 Hypercar Exhibition returns with an unprecedented line-up of 30
-                                hypercars valued at a total of over HKD1.5 billion. These models include the
-                                track-focused
-                                Pagani Huayra R, known for its uncompromising performance; the limited-edition Aston
-                                Martin V12 Speedster, created to celebrate Aston Martin's 100th anniversary; and the
-                                Lamborghini Veneno Roadster, the most expensive car in Lamborghini's history with just 9
-                                vehicles produced worldwide. For a limited time only, come face to face with your
-                                ultimate
-                                dream cars in an immersive experience showcasing the pinnacle of engineering, speed and
-                                art, close-uP.
+                            <p>The SJM Open is a prestigious golf tournament featuring professional golfers from around
+                                the world. It is held at the Macau Golf & Country Club, one of the top golf courses in Macau.
                             </p>
 
                         </div>
