--- a/tour.html
+++ b/tour.html
@@ -63,13 +63,16 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="para_hotel">
-                        <p>Discover the exciting world of sports events in Macau, where thrilling competitions and
-                            world-class athletes take center stage. From high-stakes poker tournaments and exhilarating
-                            racing events to prestigious golf tournaments and dynamic martial arts matches, Macau
-                            offers a diverse range of sporting activities. Our listings provide detailed information on
-                            upcoming events, venues, and schedules, helping you find and enjoy the best in sports
-                            entertainment. Dive into the action and experience the excitement of Macau’s premier sports
-                            events</p>
+                        <h2>Macau’s Top Tours & Attractions</h2>
+                        <p>Explore Macau with our curated selection of tours designed to showcase the city’s rich
+                            heritage and unique attractions. From cultural journeys and historical site visits to scenic
+                            city
+                            explorations and local experiences, Macau offers a range of options to suit every interest.
+                            Our listings provide detailed information on various tours, making it easy to find the
+                            perfect
+                            way to experience the city’s landmarks and hidden treasures. Dive into the best of Macau
+                            and enjoy unforgettable experiences tailored to your interests.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-6">
