--- a/tour.html
+++ b/tour.html
@@ -92,19 +92,17 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seikkailu.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.macau.grandprix.gov.mo/en/ticket-info">
-                                <h3>Macau Grand Prix</h3>
-                                <span>📍 Grand Lisboa</span>
-                                <p>📅November 14-17, 2024</p>
+                        <div class="together"> <a href="https://www.wh.mo/en/site/detail/18">
+                                <h3>Ruins of St. Paul's</h3>
+                                <span>📍 Historic Centre of Macau</span>
                             </a>
-                            <p>One of the most famous motorsport events in Asia, featuring Formula 3 and touring car
-                                races. The Grand Prix is a major attraction, and the Grand Lisboa provides key
-                                hospitality
-                                and entertainment.
+                            <p>The famous façade of a 16th-century Jesuit church, which was once one of the largest
+                                Catholic churches in Asia. It is a UNESCO World Heritage Site and a symbol of Macau’s
+                                historical blend of East and West.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.macau.grandprix.gov.mo/en/ticket-info" class="button_main">Buy Tickets
+                            <a href="https://www.wh.mo/en/site/detail/18" class="button_main">Buy Tickets
                                 CTA</a>
                         </div>
                     </div>
@@ -113,17 +111,18 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/taalla.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://worldsmarathons.com/marathon/macau-international-marathon">
-                                <h3>Macau Galaxy Entertainment International Marathon</h3>
-                                <span>📍 Macau</span>
-                                <p>📅1st December</p>
+                                href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446">
+                                <h3>Senado Square
+                                </h3>
+                                <span>📍 Central Macau</span>
                             </a>
-                            <p>A major marathon event with multiple race categories. Sponsored by Galaxy Casino and
-                                Entertainment group
+                            <p>A lively public square surrounded by colonial architecture, including the Senado
+                                Building. It's
+                                a key part of the Historic Centre of Macau and a popular spot for shopping and dining.
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://worldsmarathons.com/marathon/macau-international-marathon"
+                            <a href="https://www.viator.com/Macau-SAR-attractions/Senate-Square-Senado-Square/d4460-a94446"
                                 class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
