--- a/tour.html
+++ b/tour.html
@@ -130,17 +130,20 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/seitseman.jpg" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.macau.grandprix.gov.mo/en/">
-                                <h3>Macau Grand Prix</h3>
-                                <span>📍 Macau Grand Prix Circuit</span>
-                                <p>📅November 14-17, 2024</p>
+                        <div class="together"> <a
+                                href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB">
+                                <h3>Macau Tower</h3>
+                                <span>📍 Macau Peninsula
+                                </span>
                             </a>
-                            <p>One of Asia's premier motorsport events, featuring Formula 3, GT, and touring car races.
-                                Find accommodation and viewing decks at some of Macau’s premier hotels.
+                            <p>A 338-meter observation tower offering panoramic views of Macau. Visitors can also
+                                experience the Skywalk and bungee jump from the tower.
+
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.macau.grandprix.gov.mo/en/" class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.klook.com/en-US/activity/506-macau-tower-macau/?_currency=USD&campaignid=21207524104&adgroupid=158083778541&targetid=kwd-350785192067&matchtype=e&device=c&creative=697062045116&extensionid=&keyword=macau%20tower%20tickets&loc_interest_ms=9196149&loc_physical_ms=1007872&network=g&utm_content=campaignid_21207524104_adgroupid_158083778541&gad_source=1&gclid=Cj0KCQjwtsy1BhD7ARIsAHOi4xYHuX_n3I2QCDn_XqkwT_DG_l-CCWoYOf2Fjx8_d4azdSZ2_An23VoaAlaaEALw_wcB"
+                                class="button_main">Buy Tickets CTA</a>
                         </div>
                     </div>
                 </div>
@@ -148,15 +151,12 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
                         <div class="together"> <a href="https://www.mgmmacautennis.com/2023/en/news-20231113/">
-                                <h3>MGM Macau Open Tennis Championships</h3>
-                                <span>📍 Macau Tennis Academy</span>
-                                <p>📅December 8-14, 2024</p>
+                                <h3>A-Ma Temple</h3>
+                                <span>📍 Coloane</span>
                             </a>
-                            <p>A professional tennis tournament featuring international players. Sponsored by casino and
-                                entertainment group.
-                                A professional tennis tournament featuring international players. Sponsored by casino
-                                and
-                                entertainment group.</p>
+                            <p>One of Macau’s oldest and most significant temples, dedicated to A-Ma, the goddess of
+                                seafarers. It’s an important cultural and historical site with traditional architecture.
+                            </p>
                         </div>
                         <div class="hotel_btn">
                             <a href="https://www.mgmmacautennis.com/2023/en/news-20231113/" class="button_main">Buy
