--- a/tour.html
+++ b/tour.html
@@ -150,7 +150,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/jaaulla.avif" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.mgmmacautennis.com/2023/en/news-20231113/">
+                        <div class="together"> <a href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450">
                                 <h3>A-Ma Temple</h3>
                                 <span>📍 Coloane</span>
                             </a>
@@ -159,7 +159,7 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.mgmmacautennis.com/2023/en/news-20231113/" class="button_main">Buy
+                            <a href="https://www.viator.com/Macau-SAR-attractions/A-Ma-Temple-Ma-Kok-Miu/d4460-a6450" class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
                     </div>
