--- a/tour.html
+++ b/tour.html
@@ -169,8 +169,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/pubdistus.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.museums.gov.mo/eng/museums.html">
+                        <div class="together"> <a href="https://www.museums.gov.mo/eng/museums.html">
                                 <h3>Macau Museum</h3>
                                 <span>📍 Historic Centre of Macau</span>
                             </a>
@@ -180,25 +179,27 @@
                             </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.museums.gov.mo/eng/museums.html"
-                                class="button_main">Buy Tickets CTA</a>
+                            <a href="https://www.museums.gov.mo/eng/museums.html" class="button_main">Buy Tickets
+                                CTA</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/mikael.webp" alt="thessa"></div>
-                        <div class="together"> <a href="https://www.gov.mo/en/news/332232/">
-                                <h3>Macau International Beach Volleyball Tournament
-                                </h3>
-                                <span>📍 Various beach venues in Macau
-                                </span>
-                                <p>📅July 19-21, 2025</p>
+                        <div class="together"> <a
+                                href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village">
+                                <h3>Coloane Village</h3>
+                                <span>📍 Coloane Island</span>
                             </a>
-                            <p>A beach volleyball tournament featuring international teams.</p>
+                            <p>A charming village with colonial architecture, quaint streets, and local eateries. It’s
+                                known for
+                                its traditional atmosphere and landmarks like the Chapel of St. Francis Xavier.
+                            </p>
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.gov.mo/en/news/332232/" class="button_main">Buy
+                            <a href="https://www.macaotourism.gov.mo/en/macao-full-of-fun/tranquility-tour-in-coloane-village"
+                                class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
                     </div>
