--- a/tour.html
+++ b/tour.html
@@ -208,18 +208,20 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="http://www.asbcnews.org/macau-issued-its-boxing-plans-for-2024/">
-                                <h3>Macau International Boxing Championship
+                                href="https://www.china-roads.com/travel/macao/village-taipa/">
+                                <h3>Taipa Village
                                 </h3>
-                                <span>📍 Venetian Macao or local venues</span>
-                                <p>📅February 15, 2025</p>
+                                <span>📍 Taipa Island
+                                </span>
                             </a>
-                            <p>An international boxing event with various weight classes and renowned fighters.
+                            <p>A cultural and historical area with traditional Portuguese architecture, local shops, and
+                                eateries. It’s a great place to explore Macau’s heritage and sample local cuisine.
+
                             </p>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="http://www.asbcnews.org/macau-issued-its-boxing-plans-for-2024/"
+                            <a href="https://www.china-roads.com/travel/macao/village-taipa/"
                                 class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
