--- a/tour.html
+++ b/tour.html
@@ -207,8 +207,7 @@
                 <div class="col-12">
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
-                        <div class="together"> <a
-                                href="https://www.china-roads.com/travel/macao/village-taipa/">
+                        <div class="together"> <a href="https://www.china-roads.com/travel/macao/village-taipa/">
                                 <h3>Taipa Village
                                 </h3>
                                 <span>📍 Taipa Island
@@ -221,8 +220,7 @@
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.china-roads.com/travel/macao/village-taipa/"
-                                class="button_main">Buy
+                            <a href="https://www.china-roads.com/travel/macao/village-taipa/" class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
                     </div>
@@ -231,21 +229,17 @@
                     <div class="thessa-inner">
                         <div class="img_transition"><img src="image/puerto.webp" alt="thessa"></div>
                         <div class="together"> <a
-                                href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition">
-                                <h3>SJM Macao Open</h3>
-                                <span>📍 Macau Golf and Country Club
-                                </span>
-                                <p>📅10th - 13th October 2024
-                                </p>
+                                href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion">
+                                <h3>Macau Giant Panda Pavilion
+                                </h3>
+                                <span>📍 Coloane Island</span>
                             </a>
-                            <p>The SJM Open is a prestigious golf tournament featuring professional golfers from around
-                                the world. It is held at the Macau Golf & Country Club, one of the top golf courses in
-                                Macau.
-                            </p>
+                            <p>A dedicated pavilion where visitors can see giant pandas and other endangered species. It
+                                offers educational exhibits and information about conservation efforts.</p>
 
                         </div>
                         <div class="hotel_btn">
-                            <a href="https://www.wynnresortsmacau.com/en/wynn-signature/2024-hypercar-exhibition"
+                            <a href="https://www.macaotourism.gov.mo/en/shows-and-entertainment/family-fun/macao-giant-panda-pavilion"
                                 class="button_main">Buy
                                 Tickets CTA</a>
                         </div>
